--- a/src/style/scss/personal/index.scss
+++ b/src/style/scss/personal/index.scss
@@ -1,3 +1,9 @@
+a{
+    color: #333;
+}
+body{
+    background-color: #f2f2f2;
+}
 .head{
     // font-size: 23px;
     width: 100%;
@@ -23,4 +29,73 @@
     }
 
 
+}
+.list{
+    background-color: #fff;
+    margin-top: .2rem;
+    #lists{
+        padding: 0 .3rem;
+        li{
+            height: 1rem;
+            border-bottom: 1px solid #eee;
+            position: relative;
+            a{
+                height: 100%;
+                display: flex;
+                line-height: 1rem;
+                width: 100%;
+                
+                &#wallet{
+                    i{
+                        background: url("../images/qianbao.png") no-repeat center center/contain;
+                        display: inline-block;
+
+                    }
+                }
+                &#records{
+                    i{
+                        background: url("../images/charge_list.png") no-repeat center center/contain;
+                        display: inline-block;
+                        background-size: .28rem auto;
+
+                    }
+                }
+                &#contact{
+                    i{
+                        background: url("../images/contact.png") no-repeat center center/contain;
+                        display: inline-block;
+
+                    }
+                }
+                &#aboutus{
+                    i{
+                        background: url("../images/aboutus.png") no-repeat center center/contain;
+                        display: inline-block;
+
+                    }
+                }
+
+                i{
+                    width: .35rem;
+                    height: 100%;
+                    margin-right: .35rem;
+                    margin-top: -.02rem;
+                }
+                p{
+                    height: 100%;
+                    font-size: .32rem;
+                    color: #666;
+                }
+                span{
+                    display: inline-block;
+                    height: 100%;
+                    background: url("../images/next.png") no-repeat center center/contain;
+                    width: .15rem;
+                    position: absolute;
+                    right: 0.02rem;
+                }
+            }
+            
+        }
+    }
 }
