--- a/src/style/scss/_index.scss
+++ b/src/style/scss/_index.scss
@@ -1,8 +1,52 @@
 #app{
     height: 100%;
 }
-#container{
-    height: 100%;
+.amap-icon img{
     width: 100%;
-
+}
+.amap-copyright{
+    display: none!important;
+}
+.wrap{
+    .search{
+        width: 100%;
+        position: relative;
+        z-index: 2;
+        .search_wrap{
+            input{
+                width: 6.2rem;
+            }
+            .change-model{
+                a{
+                    background: url(../images/lists.png) no-repeat center center / contain;
+                }
+            }
+        }
+        
+      
+    }
+    .container{
+        width: 100%;
+        position: absolute;
+        top: .9rem;
+        bottom: 0;
+        #container{
+            width: 100%;
+            height: 100%;
+        }
+        .shaixuan {
+            position: absolute;
+            width: .72rem;
+            height: .72rem;
+            top: 0.33rem;
+            right: 0.15rem;
+            background: url(../images/shaixuan.png) no-repeat center center / auto 100%;
+            a{
+                display: inline-block;
+                width: 100%;
+                height: 100%;
+            }
+  
+        }
+    }
 }
