--- a/src/style/scss/_index.scss
+++ b/src/style/scss/_index.scss
@@ -1,9 +1,7 @@
 #app{
     height: 100%;
 }
-.amap-icon img{
-    width: 100%;
-}
+
 .amap-copyright{
     display: none!important;
 }
@@ -33,6 +31,13 @@
         #container{
             width: 100%;
             height: 100%;
+            .amap-icon{
+                img{
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+          
         }
         .shaixuan {
             position: absolute;
@@ -47,6 +52,19 @@
                 height: 100%;
             }
   
+        }
+        .mine{
+            box-sizing: border-box;
+            padding-top: 0.18666667rem;
+            position: fixed;
+            right: 0.4rem;
+            bottom: .28rem;
+            z-index: 9999;
+            img {
+                display: block;
+                width: .84rem;
+                margin: 0 auto;
+            }
         }
     }
 }
