--- a/src/style/scss/lists.scss
+++ b/src/style/scss/lists.scss
@@ -1,3 +1,8 @@
+
+body{
+    background-color: #f2f2f2;
+
+}
 .lists_wrap{
     height: 100%;
     background-color: #f2f2f2;
@@ -55,7 +60,9 @@
         padding: 0;
         margin: 0;
         color: #666;
+        width: 100%;
         li{
+            width: 100%;
             border-top: 1px solid #eee;
             border-bottom: 1px solid #eee;
             margin-bottom: 0.2rem;
